--- a/public/static/admin/weixin/weixin_web_viwe.css
+++ b/public/static/admin/weixin/weixin_web_viwe.css
@@ -21,9 +21,15 @@
 .webviwe .bottom{
     position:relative;
     top:465px;
-    width:100%;
+    width:101%;
     height:60px;
     line-height: 60px;
+}
+.webviwe .bottom li:hover{
+    border:1px solid blue;
+}
+.add_menu_ico{
+    width:25px;
 }
 
 .web_defalut_menu{
@@ -73,8 +79,7 @@
     padding:20px 10px;
     width: 600px;
     height: 170px;
-    /* background-color: #f0f0f0; */
-    background-color: #000;
+    background-color: #f0f0f0;
 }
 
 .conf_url_title{
@@ -83,10 +88,24 @@
     color:#a58282;
 }
 
-/* .conf_source_content{
+.conf_source_content{
+    display:none;
     margin:20px 0 20px 40px;
     padding:20px 10px;
     width: 600px;
     height: 170px;
     background-color: #f0f0f0;
-} */
+}
+.conf_source_title{
+    padding-left:10px;
+    border-bottom: 1px solid #fff;
+    color:#a58282;
+}
+.conf_sourc_mincontent{
+    width:100%;
+    height:130px;
+    background-color:#fff;
+}
+.conf_btn{
+    margin:10% 0 0 30%;
+}
