微信公众系统

--- a/application/admin/view/layout/head.html
+++ b/application/admin/view/layout/head.html
@@ -45,7 +45,8 @@
     }
     .pagination li a{
         display: block;
-        width:30px;
+        width: auto;
+        padding: 0 15px;
         height: 25px;
         line-height: 25px;
         border:1px solid rgb(171, 171, 171);
