--- a/application/admin/view/weixin/menu.html
+++ b/application/admin/view/weixin/menu.html
@@ -14,21 +14,42 @@
 
                 <div class="bottom">
                     <ul class="web_defalut_menu">
-                        <li>
-                            <img class="add_menu_ico" src="/__STATIC__/weixin/add.png" />
+                        <li class="menu" itme="10">
                             菜单1
                         </li>
-                        <li>
-                            <img class="add_menu_ico" src="/__STATIC__/weixin/add.png" />
+                        <li class="menu" itme="20">
                             菜单2
                         </li>
-                        <li>
-                            <img class="add_menu_ico" src="/__STATIC__/weixin/add.png" />
+                        <li class="menu" itme="30">
                             菜单3
                         </li>
                     </ul>
                 </div>
+                <div class="web_two_menu">
+                    <ul class="two_menu">
+                        <li class="two_menu_sub" item="13"></li>
+                        <li class="two_menu_sub" item="12"></li>
+                        <li class="two_menu_sub" item="11"></li>
+                        <li class="add_two_menu atm10" item="10">+</li>
+                    </ul>
+                    <ul class="two_menu">
+                        <li class="two_menu_sub" item="23"></li>
+                        <li class="two_menu_sub" item="22"></li>
+                        <li class="two_menu_sub" item="21"></li>
+                        <li class="add_two_menu atm20" item="20">+</li>
+                    </ul>
+                    <ul class="two_menu">
+                        <li class="two_menu_sub" item="33"></li>
+                        <li class="two_menu_sub" item="32"></li>
+                        <li class="two_menu_sub" item="31"></li>
+                        <li class="add_two_menu atm30" item="30">+</li>
+                    </ul>
+                </div>
             </div>
+
+            
+
+
 
 
             <!--右边的微信菜单设置页面-->
