--- a/application/admin/view/layout/header.html
+++ b/application/admin/view/layout/header.html
@@ -1,31 +1,13 @@
 <div class="navbar navbar-fixed-top">
     <div class="container-fluid cl">
-        <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/admin/index/index">{$web_setting.web_name}</a>
-        <!-- <a class="logo navbar-logo-m f-l mr-10 visible-xs"href="/aboutHui.shtml">H-ui</a> -->
-        <!-- <span class="logo navbar-slogan f-l mr-10 hidden-xs">v3.1</span> -->
+        <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/" target="_bank">{$web_setting.web_name}</a>
         <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
-        <!-- <nav class="nav navbar-nav">
-            <ul class="cl">
-                <li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i
-                            class="Hui-iconfont">&#xe600;</i> 新增 <i class="Hui-iconfont">&#xe6d5;</i></a>
-                    <ul class="dropDown-menu menu radius box-shadow">
-                        <li><a href="javascript:;" onclick="article_add('添加资讯','article-add.html')"><i
-                                    class="Hui-iconfont">&#xe616;</i> 资讯</a></li>
-                        <li><a href="javascript:;" onclick="picture_add('添加资讯','picture-add.html')"><i
-                                    class="Hui-iconfont">&#xe613;</i> 图片</a></li>
-                        <li><a href="javascript:;" onclick="product_add('添加资讯','product-add.html')"><i
-                                    class="Hui-iconfont">&#xe620;</i> 产品</a></li>
-                        <li><a href="javascript:;" onclick="member_add('添加用户','member-add.html','','510')"><i
-                                    class="Hui-iconfont">&#xe60d;</i> 用户</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav> -->
+        
         <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
             <ul class="cl">
                 <li>{$group}</li>
                 <li class="dropDown dropDown_hover">
-                    <a href="#" class="dropDown_A">{$admin_info['name']} <i class="Hui-iconfont">&#xe6d5;</i></a>
+                    <a href="/admin" class="dropDown_A">{$admin_info['name']} <i class="Hui-iconfont">&#xe6d5;</i></a>
                     <ul class="dropDown-menu menu radius box-shadow">
                         <!-- <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
                         <li><a href="#">切换账户</a></li> -->
