--- a/application/admin/view/weixin/custom_menu.html
+++ b/application/admin/view/weixin/custom_menu.html
@@ -13,16 +13,17 @@
                     <i class="Hui-iconfont">&#xe600;</i> 
                     添加菜单
 				</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="javascript:;" onclick="menu_push('发布菜单')" class="btn btn-success radius">
                     <i class="Hui-iconfont">&#xe603;</i> 
-                    发布菜单
+                    发布更新菜单
                 </a>
 			</span> 
             <span class="r">共有数据：<strong></strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="9">基因数据列表</th>
+					<th scope="col" colspan="9">自定义菜单列表</th>
 				</tr>
 				<tr class="text-c">
                     <th width="30">ID</th>
@@ -43,7 +44,7 @@
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe695;</i>
 						</a>
-						<a title="删除" href="javascript:;" onclick="del_gene('{$vo.id}')" class="ml-5"
+						<a title="删除" href="javascript:;" onclick="del_custom_menu('{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6e2;</i>
                         </a>
@@ -70,14 +71,14 @@
 		function del_custom_menu(id){
 			layer.confirm('您正在执行删除操作！', {icon: 3, title:'敏感操作提醒'}, function(index){
 				//do something
-				$.post('/admin/gene/del_gene',{id:id},function(res){
+				$.post('/admin/weixin/del_custom_menu',{id:id},function(res){
 					if(res.status == 1){
 						layer.msg('操作成功！', {icon:6});
 						setTimeout(function(){
 							window.location.replace(location.href);
 						},1500);
 					}else{
-						layer.msg('操作失败，请重试！', {icon:5});
+						layer.msg(res.msg, {icon:5});
 					}
 				});
 				layer.close(index);
