--- a/application/admin/view/layout/footer.html
+++ b/application/admin/view/layout/footer.html
@@ -9,19 +9,7 @@
 <script type="text/javascript" src="/__STATIC__/lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">
 $(function(){
-	/*$("#min_title_list li").contextMenu('Huiadminmenu', {
-		bindings: {
-			'closethis': function(t) {
-				console.log(t);
-				if(t.find("i")){
-					t.find("i").trigger("click");
-				}		
-			},
-			'closeall': function(t) {
-				alert('Trigger was '+t.id+'\nAction was Email');
-			},
-		}
-	});*/
+
 });
 /*个人信息*/
 function myselfinfo(){
@@ -36,37 +24,24 @@ function myselfinfo(){
 	});
 }
 
-/*资讯-添加*/
-function article_add(title,url){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
-/*图片-添加*/
-function picture_add(title,url){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
-/*产品-添加*/
-function product_add(title,url){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
-/*用户-添加*/
-function member_add(title,url,w,h){
-	layer_show(title,url,w,h);
+function layer_error_msg(msg=''){
+
+	layer.msg(msg,{icon:5});
 }
 
+function layer_success_msg(msg,re){
 
+	layer.msg(msg,{icon:6});
+	if(re){
+		
+		setTimeout(function(){
+			parent.layer_open_closeAll();
+		},2000);
+	}
+}
+
+function layer_open_closeAll(){
+	layer.closeAll();
+	window.location.replace(location.href);
+}
 </script> 
