pc端：基因分析结果  翻新

--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="code fl">
-        <img width="100px" height="100px " src="{$web_setting.weixin_qrcode}" />
+        <img width="100px" height="100px " src="{$web_setting.weixin_qrcode}"  class="zhifeng_qrcode"/>
         <p>扫码关注我们</p>
     </div>
 </div>
