--- a/public/static/index/css/buy/buy.css
+++ b/public/static/index/css/buy/buy.css
@@ -5,6 +5,7 @@ img {
 }
 .wrapper .inner-wrap .content {
 	margin: 53px 0 0;
+	min-height: 700px
 }
 .wrapper .inner-wrap .content .item {
 	display: inline-block;
