--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -23,17 +23,15 @@
                 {include file="header"}
             </div>
 
-
-            
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="__STATIC__/images/home/banner-img01.png">
+                    <img src="__STATIC__/images/home/banner1.jpg">
                 </div>
                 <div class="swiper-slide">
-                    <img src="__STATIC__/images/home/banner-img01.png">
+                    <img src="__STATIC__/images/home/banner2.jpg">
                 </div>
                 <div class="swiper-slide">
-                    <img src="__STATIC__/images/home/banner-img01.png">
+                    <img src="__STATIC__/images/home/banner3.jpg">
                 </div>
             </div>
             <div class="swiper-pagination"></div>
