--- a/public/static/index/css/home/index.css
+++ b/public/static/index/css/home/index.css
@@ -8,6 +8,9 @@
 .banner-wrap{
     position: relative;
 }
+.swiper-container{
+    height:750px
+}
 .banner-wrap img{
     width: 100%;
     display: block;
