--- a/application/index/view/buy/my_order.html
+++ b/application/index/view/buy/my_order.html
@@ -99,12 +99,13 @@
                 <div class="dzcpage">{$lists->render()}</div>
             </div>
             <!-- 底部 -->
-		    <div class="footer"></div>
+		    <div class="footer">
+                {include file="footer"}
+            </div>
         </div>    
             
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-        <script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
         <script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
         <script>
         function confirm_order(id){
