修复几个页面的头部和底部引入错误

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -175,7 +175,7 @@
 
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>   
     <script src="__STATIC__/js/public/swiper.js"></script>
-    <script src="__STATIC__/js/public/header.js"></script>  
+    <!-- <script src="__STATIC__/js/public/header.js"></script>   -->
     <!-- <script src="__STATIC__/js/public/footer.js"></script> -->
     <script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
