--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title class="pageTopTitle" page-id="0">导入数据</title>
+    <title class="pageTopTitle" page-id="0">导入数据{$web_setting.web_name}{$web_setting.web_title}</title>
+    <meta name="keywords" content="{$web_setting.key_words}" />
+    <meta name="description" content="{$web_setting.copyright}" />
+    <link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
     <link rel="stylesheet" href="__STATIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__STATIC__/css/public/public.css">
     <link rel="stylesheet" href="__STATIC__/css/home/biaoge_bianji.css">
@@ -37,7 +40,7 @@
 						
 						<ul class="xiala ">
 							
-							<li style="width: 100%;font-size: 20px;">29Y-STR基因座分型结果</li>
+							<li style="width: 100%;font-size: 20px;">36Y-STR基因座分型结果</li>
 							
 						</ul>
 						<ul class="xiala">
@@ -46,30 +49,149 @@
 							<li>频度</li>
 						</ul>
 						<ul class="xiala">
-							
 							<li><input type="text" name="key[]" value="DYS19"/></li>
 							<li><input type="text" name="value[]" /></li>
-						</ul>
-						<ul class="xiala">
-							
-							<li><input type="text" value="DYS389I"/></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS389I"/></li>
 							<li><input type="text" name="value[]" /></li>
-						</ul>
-						<ul class="xiala">
-							
+                        </ul>
+                        <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS389b"/></li>
 							<li><input type="text" name="value[]" /></li>
-						</ul>
-						<ul class="xiala">
-							
-							<li><input type="text" name="key[]" value=""/></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS390"/></li>
 							<li><input type="text" name="value[]" /></li>
-						</ul>
-						<ul class="xiala">
-							
-							<li><input type="text" name="key[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS391"/></li>
 							<li><input type="text" name="value[]" /></li>
-						</ul>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS392"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS393"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS437"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS438"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS439"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS448"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS456"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS458"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS635"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="GATA-H4"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS385a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS385b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS449"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS460"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS481"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS518"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS533"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS570"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS576"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS627"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS387S1a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS387S1b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS388"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS444"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS549"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS643"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS722"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS404S1a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS404S1b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS527a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS527b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
                     </form>
 					</div>	
 				
@@ -81,13 +203,15 @@
           </div> 
           
         <!-- 底部 -->
-        <div class="footer"></div>
+        <div class="footer">
+            {include file="footer"}
+        </div>
         <iframe name="ajaxR" style="display:none;"></iframe>
     </div>  
 
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script> 
-    <script src="__STATIC__/js/public/header.js"></script>  
-    <script src="__STATIC__/js/public/footer.js"></script>
+    <!-- <script src="__STATIC__/js/public/header.js"></script>  
+    <script src="__STATIC__/js/public/footer.js"></script> -->
     <script src="__STATIC__/js/public/selectDate.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
