批量导入模板 --未完成

--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <a style="float: left;" href="/index/index/online_import_data">在线填写数据</a>
-                    <a href="__STATIC__/检查结果.xlsx" download="检查结果.xlsx" class="downloadss">下载基因模板:检查结果.xlsx</a>
+                    <a href="__STATIC__/基因导入模板.xlsx" download="基因导入模板.xlsx" class="downloadss">下载:基因导入模板.xlsx</a>
                     <div class="btn">
                         <button type="submit">确认</button>
                     </div>
