后台：分享二维码，默认值，刷新缓存

--- a/application/admin/view/distribution/shareposter.html
+++ b/application/admin/view/distribution/shareposter.html
@@ -52,25 +52,25 @@
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-2">二维码 * 宽：</label>
                     <div class="formControls col-xs-8 col-sm-3"> 
-                        <input type="text" class="input-text" name="w" id="code_width" value="75">
+                        <input type="text" class="input-text" name="w" id="code_width" value="{$config.w ? $config.w : 75}">
                     </div>
                 </div>
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-2">二维码 * 高：</label>
                     <div class="formControls col-xs-8 col-sm-3"> 
-                        <input type="text" class="input-text" name="h" id="code_height" value="75">
+                        <input type="text" class="input-text" name="h" id="code_height" value="{$config.h ? $config.h : 75}">
                     </div>
                 </div>
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-2">二维码 * X：</label>
                     <div class="formControls col-xs-8 col-sm-3"> 
-                        <input type="text" class="input-text" name="code_x" id="code_x" value="0">
+                        <input type="text" class="input-text" name="code_x" id="code_x" value="{$config.x ? $config.x : 0}">
                     </div>
                 </div>
                 <div class="row cl">
                     <label class="form-label col-xs-4 col-sm-2">二维码 * Y：</label>
                     <div class="formControls col-xs-8 col-sm-3"> 
-                        <input type="text" class="input-text" name="code_y" id="code_y" value="0">
+                        <input type="text" class="input-text" name="code_y" id="code_y" value="{$config.y ? $config.y : 0}">
                     </div>
                 </div>
                 <div class="row cl" style="margin-top:100px;">
