友好的修改

--- a/application/admin/view/distribution/setting.html
+++ b/application/admin/view/distribution/setting.html
@@ -16,7 +16,7 @@
 						<span class="select-box" style="width:150px;">
 							<select class="select" id="status" name="status" size="1">
 								<option value="0" {if condition="!isset($info.status) || (isset($info.status) && $info.status == 0)"}selected{/if}>关闭</option>
-								<option value="1" {if condition="isset($info.status) && $info.status == 1"}selected{/if}>开启</option>
+								<option value="{$info.status ? $info.status : 1}" {if condition="isset($info.status) && $info.status > 0"}selected{/if}>开启</option>
 							</select>
 						</span>
 						<p style="color:cf5656;font-size:12px;">只有当分销系统处于“开启”状态时，下面的设置才会起作用</p>
