--- a/application/mobile/view/index/edit_password.html
+++ b/application/mobile/view/index/edit_password.html
@@ -38,7 +38,7 @@
 						<!--右-->
 						<div class="publicTermRightP">
 							<!--input-->
-							<input type="text" class="publicTRPInput" id="email" placeholder="请输入电子邮箱">
+							<input type="text" class="publicTRPInput" id="email" value="{$email}" placeholder="请输入电子邮箱">
 						</div>
 					</div>
 				</div>
