--- a/application/mobile/view/index/edit_paypass.html
+++ b/application/mobile/view/index/edit_paypass.html
@@ -39,7 +39,7 @@
 						<div class="publicTermRightP">
 							<!--input-->
 							
-							<input type="text" class="publicTRPInput" id="email" value="" placeholder="请输入电子邮箱">
+							<input type="text" class="publicTRPInput" id="email" value="{$email}" placeholder="请输入电子邮箱">
 							
 						</div>
 					</div>
